@@ -78,3 +78,4 @@ History
 		The 1991 C translation reintegrated the tables and translated then as such, instead of as common blocks.
 2021/09/23	Lifting the common blocks {dir,prp,buz}voc, respectively, to constant integer arrays {d,p,b}voc[].
 		This is a bona fide upgrade: it goes beyond the Fortran original and 1991 C translation.
+2021/09/23	Reconciling the remaining differences between the translations of the common blocks (/vers/).
